# mLRS

mLRS/Common/: bind.h  common.h  common_conf.h  common_types.cpp  rf_power.h  setup.h
mLRS/Common/hal/: device_conf.h  hal.h
mLRS/Common/hal/esp/: esp-device_conf.h  esp-hal.h
mLRS/Common/hal/linux/: serial.h  tx-dev-linux.h
mLRS/Common/sx-drivers/: sx12xx_driver.h
mLRS/CommonTx/: jr_pin5_interface.h  mlrs-tx.cpp
mLRS/tx-linux/: CMakeLists.txt
mLRS/tx-linux/Core/Src/: main.cpp  utils.cpp
